@@ -17,6 +17,10 @@ Changelog
 - Include email of attendee in iCal export if attendee is a member.
   [buchi]
 
+- Improved iCal export of all day events. Only events with no start and end
+  time (00:00) are treated as all day events.
+  [buchi]
+
 
 1.3.7 (2012-06-21)
 ------------------
